Add list all page

--- a/views/ostrich.pug
+++ b/views/ostrich.pug
@@ -2,11 +2,12 @@ extends layout
 
 block content
   h1= title
-  - results = [{name:"Jerry", age:2, feather_count:546}, {name:"Susie", age:4, feather_count:668}, {name:"Tom", age:6, feather_count:800}]
+  //- results = [{name:"Jerry", age:2, feather_count:546}, {name:"Susie", age:4, feather_count:668}, {name:"Tom", age:6, feather_count:800}]\
+  - let items = results
   div(class="container-fluid")
     div(class="row")
     - let index = 0
-    each item in results
+    each item in items
       div(class="col-sm-2" onclick=`buy(${index})`) Name: #{item["name"]} Age: #{item["age"]} Feather Count: #{item["feather_count"]}
       - index += 1
   script.
