--- a/views/index.pug
+++ b/views/index.pug
@@ -1,20 +1,15 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to Brady's #{title} server
-  button(type="button", class="btn, btn-primary" onclick="double()") I am a button
-  div(id="double") Up the amount
-  a(href="ostrich") Ostrich Search
- 
-  script.
-    value = 0
-    power = 1
-    function double() {
-      value += 1
-      power *= 2
-      document.getElementById("double").innerHTML = `Two to the power ${value} is ${power}`
-    }
-  
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/ostriches") Take me to ostriches
+    br
+    a(href="/logout") Logout
+
   
   
