--- a/views/ostrich.pug
+++ b/views/ostrich.pug
@@ -9,8 +9,12 @@ block content
     - let index = 0
     each item in items
       - let destination = `dispatch(\"/ostriches/update?id=${item._id}\")`
+      - let destination2 = `dispatch(\"/ostriches/detail?id=${item._id}\")`
+      - let destination3 = `dispatch(\"/ostriches/delete?id=${item._id}\")`
       div(class="col-sm-2" onclick=`buy(${index})`) Name: #{item["name"]} Age: #{item["age"]} Feather Count: #{item["feather_count"]}
         button.btn( class="btn-primary ml-1", onclick= destination) Update
+        button.btn( class="btn-primary ml-1", onclick= destination2) Detail
+        button.btn( class="btn-primary ml-1", onclick= destination3) Delete
       - index += 1
   script.
     function buy(index) {
